--- a/.github/workflows/auto-update-remi.yml
+++ b/.github/workflows/auto-update-remi.yml
@@ -2,8 +2,11 @@ name: Update GitHub Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Ye daily 12 AM (UTC) par run hoga.
-  workflow_dispatch:  # Ye manual trigger ke liye bhi enable karega.
+    - cron: "0 0 * * *"  # Daily 12 AM (UTC) par run hoga
+  workflow_dispatch:  # Manual trigger enable karega
+
+permissions:
+  contents: write  # Repo modify karne ki permission
 
 jobs:
   update-remi-md:
@@ -23,5 +26,5 @@ jobs:
         git config --local user.email "github-actions@github.com"
         git config --local user.name "GitHub Actions"
         git add remi.md
-        git commit -m "🔄 Auto-update remi.md with latest stats"
+        git commit -m "🔄 Auto-update remi.md with latest stats" || echo "No changes to commit"
         git push
