--- a/.github/workflows/auto-update-remi.yml
+++ b/.github/workflows/auto-update-remi.yml
@@ -2,11 +2,11 @@ name: Update GitHub Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Daily 12 AM (UTC) par run hoga
-  workflow_dispatch:  # Manual trigger enable karega
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 permissions:
-  contents: write  # Repo modify karne ki permission
+  contents: write
 
 jobs:
   update-remi-md:
@@ -16,10 +16,9 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Update remi.md with GitHub Stats
-      uses: anuraghazra/github-readme-stats@v1
-      with:
-        USERNAME: ${{ github.repository_owner }}
+    - name: Fetch GitHub Stats and Update remi.md
+      run: |
+        echo "![GitHub Stats](https://github-readme-stats.vercel.app/api?username=${{ github.repository_owner }}&show_icons=true&theme=radical)" > remi.md
 
     - name: Commit and Push Changes
       run: |
@@ -27,4 +26,4 @@ jobs:
         git config --local user.name "GitHub Actions"
         git add remi.md
         git commit -m "🔄 Auto-update remi.md with latest stats" || echo "No changes to commit"
-        git push
+        git push origin main
