--- a/.github/workflows/auto-update-remi.yml
+++ b/.github/workflows/auto-update-remi.yml
@@ -2,8 +2,8 @@ name: Update GitHub Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 0 * * *"  # Har din raat 12 baje (UTC) chalega
+  workflow_dispatch:  # Manual trigger bhi enable hoga
 
 permissions:
   contents: write
